<resources>
    <string name="app_name">Capella Mobile</string>
    <string name="method_required">Method type required : GET, POST, PUT</string>
    <string name="capella_university">Capella University</string>
    <string name="email">Email/Username</string>
    <string name="password">Password</string>
    <string name="show">Show</string>
    <string name="show_password">SHOW</string>
    <string name="hide">Hide</string>
    <string name="no_access_mobile">No Access To Mobile App</string>
    <string name="prefference">PREFERENCES</string>
    <string name="push_notification">Push Notifications</string>
    <string name="push_notification_message">Push notifications can help you stay on top of course messages, replies, and feedback.</string>
    <string name="prospective_student_info">Prospective Student Info</string>
    <string name="settings">Settings</string>
    <string name="complete_an_application">You must complete an application for admission to Capella to get access to the mobile app.</string>
    <string name="apply_for_admision">Apply for Admission</string>
    <string name="trial_course">Trial Course</string>
    <string name="Your_draft_edits">Your draft edits weren’t saved.</string>
    <string name="please_try_again">Please try again.</string>
    <string name="target_dates_saved">Target dates saved.</string>
    <string name="see_error">See errors below and try again.</string>
    <string name="saving_target_dates">Saving Target Dates</string>
    <string name="logout_out_due_inactivity">Logged out due to inactivity.</string>
    <string name="please_sign_in_agian">It looks like you haven’t used the app for a while, so we have logged you out for your security. Please sign in again.</string>
    <string name="please_review_employment_information"> Please review and confirm that the contact and employment information we have for you are correct. Keeping this information up-to-date…</string>
    <string name="resource_might_not_open">Resources might not open on your phone.</string>
    <string name="not_internet_connection"> No internet connection.</string>
    <string name="alert">Alerts</string>
    <string name="connection_is_required">A connection is required to log in.</string>
    <string name="learn_aboout_cappela_university">Learn about Capella University</string>
    <string name="forgot_username">Forgot Username</string>
    <string name="forgot_username_ada">Forgot\nUsername</string>
    <string name="technical_support">Technical Support:</string>
    <string name="capella_mobile">Capella Mobile, version</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_ada">Reset\nPassword</string>
    <string name="toll_number">1-888-227-3552</string>
    <string name="network_error">Network Errors</string>
    <string name="message_on_target_dates_screen">"Set your target date for completing the assessment in this course.\n\n<b>Important:</b> You must complete and submit a course plan in order to release any financial aid funds you have been awarded.\n\nContact your coach if you need assistance or have any questions."</string>
    <string name="login">Log In</string>
    <string name="Your_post_submitted">Your post wasn’t submitted.</string>
    <string name="copied_url">Link has been copied.</string>
    <string name="attached_txt">Edit or delete this file attachment in the courseroom.</string>
    <string name="log_in_error">Log In Error</string>
    <string name="not_saved">Not Saved</string>
    <string name="you_must_have_suject">You must have a subject to save a draft.</string>
    <string name="you_must_have_content">You must have content in the subject and body.</string>
    <string name="sign_in_error">The email/username or password you entered does not match our records. Note that passwords are case-sensitive, be sure your caps lock is turned off.</string>
    <string name="please_enter_user_name_password">Please enter your username and password.</string>
    <string name="please_enter_user_name">Please enter your username.</string>
    <string name="please_enter_password">Please enter your password.</string>
    <string name="ok">OK</string>
    <string name="keep_editing">Keep Editing?</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="assessmenet">Assessment</string>
    <string name="continue_editing">CONTINUE EDITING</string>
    <string name="america_chicago">America/Chicago</string>
    <string name="discard_changes">DISCARD CHANGES</string>
    <string name="your_last_recorded_activity">Your last recorded activity in this course was on</string>
    <string name="please_submit_an_assessment">Please submit an assessment today or</string>
    <string name="update_your_progress">update your progress.</string>
    <string name="academic_engagement">Academic Engagement Needed</string>
    <string name="academic_engagement_verfication">Engagement Verification Pending</string>
    <string name="save_as_draft">SAVE AS DRAFT</string>
    <string name="last_saved_on">Last saved on</string>
    <string name="central">Central</string>
    <string name="we_have_received">We have received your course progress update. There may be a short processing delay before it appears in the course.</string>
    <string name="editDraft">Edit Draft</string>
    <string name="complete_assessment">Please complete an assessment or activity.</string>
    <string name="discussions">Discussion</string>
    <string name="confirm">Confirm</string>
    <string name="get_update">GET UPDATE</string>
    <string name="keep_me_sign_in">Keep Me Signed In</string>
    <string name="update_your_app">Please update your app</string>
    <string name="update_your_app_header">Please Update Your App</string>
    <string name="you_must_updrade_your_app">We’ve made important security improvements to the Capella Mobile app. You must upgrade your app before you can log in.</string>
    <string name="keep_me_sign_detail">While you are logged in, the app is directly connected to your Capella accounts, including your <b>financial, academic </b>and<b> personal information.</b> We do not recommend using the “keep me signed in” option if your mobile device is shared, or if this device is being used without security measures that prevent unauthorized access.\n \nChoose confirm to stay signed in, or cancel to be automatically logged out of the app after 60 minutes of inactivity.</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_view_campus_on_full_site">View Campus on Full Site</string>
    <string name="menu_campus_news">Campus News</string>
    <string name="announcement">Announcements</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_library">Library</string>
    <string name="menu_academic_plan">Academic Plan</string>
    <string name="menu_finances">Finances</string>
    <string name="open_browser">Open in browser</string>
    <string name="copy_link">Copy link</string>
    <string name="assessment_submitted">No assessments have been submitted.</string>
    <string name="Share">Share…</string>
    <string name="menu_courses">Courses</string>
    <string name="information_not_available">Information not Available</string>
    <string name="tap_to_open_menu">Tap to open menu</string>
    <string name="or">OR</string>
    <string name="swipe_right_to_open_menu_from_everywhere">Swipe right to\nopen menu from anywhere</string>
    <string name="ok_got_it">Ok, Got It</string>
    <string name="id">ID:</string>
    <string name="united_states_toll_free">United States toll-free:</string>
    <string name="capella_1_888">1-888-CAPELLA</string>
    <string name="toll_free_1_888_227_3552">1-888-227-3552</string>
    <string name="international">International:</string>
    <string name="international_no_1_612_977_5000">1-612-977-5000</string>
    <string name="technical_support_message">Technical support is available by phone 24/7. Academic and Financial Aid phone support is available:\nMonday - Friday: 7 a.m. - 8 p.m.\nSaturday: 9 a.m. - 5:30 p.m.</string>
    <string name="all_time_are_central"><i>All times are Central.</i></string>
    <string name="web">Web</string>
    <string name="technical_support_without_colon">Technical Support</string>
    <string name="browse_technical_page_message">Browse the Technical Support page on Campus.</string>
    <string name="capella_mobile_version">This is Capella Mobile, version</string>
    <string name="academic_support">Academic Support</string>
    <string name="visit_academic_message">Visit the Academic Advising page for questions on course planning, grades, or academic coaching.</string>
    <string name="academic_advising">Academic Advising</string>
    <string name="capella_campus">Capella Campus</string>
    <string name="visit_capella_campus">For all other online resources, visit Capella Campus.</string>
    <string name="mail">Mail</string>
    <string name="capella_university_address">Capella Tower\n225 South 6th Street, 9th Floor\nMinneapolis, MN 55402</string>
    <string name="library">Library</string>
    <string name="search_tools">Search Tools</string>
    <string name="contact_us">Contact Us</string>
    <string name="phone">PHONE</string>
    <string name="toll_free">Toll free:</string>
    <string name="summon">Summon</string>
    <string name="database">Database A-Z</string>
    <string name="use_summon_to_find_articles">Use Summon to find articles, books, and other resources across the library collection.</string>
    <string name="select_from_complete">Select from a complete list of subject-specific databases.</string>
    <string name="error">Error</string>
    <string name="profile">Profile</string>
    <string name="classmates">Classmates</string>
    <string name="unsaved_changes">Unsaved Changes</string>
    <string name="discard_your_changes">You can discard your changes, or keep editing and save your changes by using the save button.</string>
    <string name="toll_number_library">1-888-375-8221</string>
    <string name="international_no_library">1-612-977-4033</string>
    <string name="hours">Hours</string>
    <string name="library_staff_available">Library staff are available:</string>
    <string name="library_staff_availability">Monday - Wednesday: 8:00 a.m. - 8:00 p.m.\nThursday - Friday: 8:00 a.m. - 5:00 p.m.\nSaturday: 9:00 a.m. - 5:00 p.m.\nSunday: 12:00 p.m. - 8:00 p.m.</string>
    <string name="generic_error_message">Unable to load, Please try again later</string>
    <string name="session_expired">Session expired</string>
    <string name="please_login_again">Please log in again.</string>
    <string name="toll_free_number">Toll free number</string>
    <string name="international_number">international number</string>
    <string name="reference_and_interlibrary_message">Reference and Interlibrary Loan services will not be available on the following university holidays:</string>
    <string name="holiday_list">"New Year's Day \nMartin Luther King Jr. Day \nMemorial Day \nIndependence Day \nLabor Day \nThanksgiving Day \nDay after Thanksgiving \nChristmas Eve \nChristmas Day "</string>
</resources>